Increase the line spacing fix #58

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -25,6 +25,10 @@ html, body {
           box-shadow: 0 1px 2px rgba(0,0,0,.15);
 }
 
+p, li{
+  line-height: 160%;
+}
+
 /* Page header tweaks */
 .page-header {
   background-color: #f5f5f5;
